hphp/hack/test/typecheck/expression_trees/nesting/deep.php.exp
ERROR: File "deep.php", line 8, characters 77-78:
Variable `$x` is undefined in this `ExampleDsl` expression tree. (Naming[2050])
  File "deep.php", line 8, characters 35-52:
  Did you forget to splice in `$x`?
